# python-zgc

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
benchmarks/: benchmark.md  benchmark_compare.py  benchmark_efficiency.py
docs/: planning.md
src/: pyzgcmodule.c  zbarrier.c  zbarrier.h  zgc.c  zgc.h  zheap.c  zheap.h  zjit_interface.h  zmarkstack.c  zmarkstack.h  zobject.c  zobject.h
tests/: test_alloc.py  test_barrier.py  test_gc.py  test_gc_integration.py  test_internal_cycle.py  test_marking.py  test_minor_gc.py  test_object.py  test_relocation.py  test_repr.py  test_stress.py  test_thread_safety.py  test_weakref.py
