[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzgc"
version = "0.1.0"
description = "A custom Garbage Collection library for Python inspired by ZGC"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
  {name = "Juwon Kim", email = "juwon.kim@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Memory",
]

[project.urls]
"Homepage" = "https://github.com/juwonkim/python-zgc"
"Bug Tracker" = "https://github.com/juwonkim/python-zgc/issues"
